--- a/templates/index.html
+++ b/templates/index.html
@@ -1,96 +1,50 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		
-	    
-		
-		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="static/css/style.css">
-		<title>Interactive Transcript</title>
-		<meta name="description" content="Free Web tutorials">
-		<meta name="author" content="Cody Saylor">
-		    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script src="static/js/etherpad.js"></script>
-
-		</head>
-	<body>
-		
-
-		
-		<div style="float: left" id="left">
-			<div id='player'></div>
-			<div id="cc" class="resizable" style="width:0px; height:0px; overflow-y: scroll; overflow-x: hidden;"></div>
-		<div id="gradient" style="width:100%; height:16px; text-align:center; background: linear-gradient(to bottom, rgba(255,255,255,0.4), #fff); position: relative; top: -20px;"></div>
-		<div id="container" style="height:500px; width: 100%; position: relative;">
-		<div id="hiddentimeholder" hidden>Hidden time holder</div>
-		<input type="text" id="whatupyo" hidden>
-		<input type="text" id="dur_holder" hidden>
-		
-		<button onClick="scrollToBottom()">Scroll to Bottom</button>
-		<div id="lines" style="height:250px; overflow-y: scroll; overflow-x: hidden;">
-			
-		</div>
-		</div>
-		</div>
-		
-		<div id="right">
-			<div style="float: left" id="examplePadBasic"></div>
-		</div>
-		
-		<script type="text/javascript">
-
-        // The most basic example
-		var pad = $('#examplePadBasic').pad({'padId':'test'}); // sets the pad id and puts the pad in the div
-		
-		/*
-		var add = setInterval(function() {
-		    // allow 1px inaccuracy by adding 1
-		    var isScrolledToBottom = lines.scrollHeight - lines.clientHeight <= lines.scrollTop + 1;
-		   console.log(lines.scrollHeight - lines.clientHeight,  lines.scrollTop + 1);
-
-		    // scroll to bottom if isScrolledToBotto
-		    if(isScrolledToBottom)
-		      lines.scrollTop = lines.scrollHeight;
-		}, 300);*/
-
-		function addLine(padID,text) {
-	        $.ajax({
-	          type: "GET",
-	          url: "/setText",
-	          data:{ text: text+'\n',padID:padID}
-
-	        }).done(function( response ) {
-	        	console.log(response);
-	            response = JSON.parse(response);    // parse JSON string
-	            console.log(response);
-	            for(var padID in response){
-	                console.log('test');
-	           }            
-	        }); 
-
-	        //setTimeout(getPadUsersCount, 3000); // call getPadUsersCount every 3 seconds
-	    }
-
-	   function scrollToBottom(){
-				//lines.scrollTop = lines.scrollHeight - lines.clientHeight;
-			lines.scrollTop = lines.scrollHeight;			
-	   }
-
-		/*
-		var url = "http://0.0.0.0:9001/api/1/getText?apikey="+apikey+"&padId=test";
-			$.ajax({
-			  url: url,
-			}).done(function() {
-		});
-		*/   
-	    
-	    </script>
-
-		
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-		<script src="static/jQuery.tubeplayer.min.js"></script>
-		<script src="static/js/main.js"></script>
-	</body>
+    <head>
+        <title>
+            CHI2017 LanBridge
+        </title>
+    </head>
+    <body>
+        <h3>
+            CHI2017 LanBridge
+        </h3>
+        <p>
+            Thanks for using CHI2017 LanBridge! The following are the supporting sessions. We recommend to use <b>laptop</b> to have better experience.
+        </p>
+        <div class="session-block-template" style="display: none">
+            <li>
+                <p>
+                    <a href="/slides?session_id">
+                        <span class="session-title">
+                            sessionPadTemplate
+                        </span>
+                        :
+                        <span class="session-time">
+                            13:00
+                        </span>
+                    </a>
+                </p>
+            </li>
+        </div>
+        <div class="session-display-area">
+        </div>
+    </body>
+    <script src="static/js/jquery.js">
+    </script>
+    <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
+    </script>
+    <script>
+        // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyBvhsHOR3UrEdb6gTXR9tIOihdsYizOaVc",
+        authDomain: "clc-chi-6d953.firebaseapp.com",
+        databaseURL: "https://clc-chi-6d953.firebaseio.com",
+        storageBucket: "clc-chi-6d953.appspot.com",
+        messagingSenderId: "20034161141"
+      };
+      firebase.initializeApp(config);
+    </script>
+    <script src="static/js/menu.js">
+    </script>
 </html>
