user count -- if user leaves the page; set default text

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -43,7 +43,7 @@
         <!--[if lt IE 9]
     <![endif]-->
     </head>
-    <body>
+    <body onunload="userUnload()">
         <div id="wrapper">
             <!-- Sidebar -->
             <div id="sidebar-wrapper">
