--- a/templates/slides.html
+++ b/templates/slides.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     </head>
-    <body>
+    <body onunload="userUnload()">
         <div id="wrapper">
             <!-- Sidebar -->
             <div id="sidebar-wrapper">
