--- a/templates/worker.html
+++ b/templates/worker.html
@@ -49,17 +49,23 @@
             <div id="sidebar-wrapper">
                 <div class="col-md-offset-2">
                     <ul class="sidebar-nav">
-                        <li class="sidebar-brand">
-                            <a href="#">
-                                Logo
-                            </a>
-                        </li>
-                        <li class="icon">
-                            <a onclick="extend()">
-                                ☰
-                            </a>
-                        </li>
-                        <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');" >How to use</a>
+                        <div>
+                            <li class="sidebar-brand">
+                                <a href="/">
+                                    <img id="logo" src="static/img/logo.png" style="height:80px">
+                                    </img>
+                                </a>
+                            </li>
+                            <li class="icon">
+                                <a onclick="extend()">
+                                    ☰
+                                </a>
+                            </li>
+                        </div>
+                        <br/>
+                        <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
+                            How to use
+                        </a>
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
@@ -146,7 +152,7 @@
         <!-- /#wrapper -->
         <!-- Menu Toggle Script -->
         <script>
-        function extend() {
+            function extend() {
             $(".sidebar-nav").toggleClass("responsive");
             $("#sidebar-wrapper").toggleClass("extend");
             $("#wrapper").toggleClass("extend");
