add logo in homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,12 @@
         </title>
     </head>
     <body>
-        <h3>
+        <img id="logo" src="static/img/logo_round.png" style="height:80px">
+        </img>
+        <!-- <h3>
             CHI2017 LanBridge
-        </h3>
+        </h3> -->
+        
         <p>
             Thanks for using CHI2017 LanBridge! The following are the supporting sessions. We recommend to use <b>laptop</b> to have better experience.
         </p>
