change the title of transcription

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -97,7 +97,7 @@
                             <div class="speechTemplate">
                             </div>
                             <b style="font-size:20px;">
-                                Speech Recognition:
+                                Auto Transcription:
                             </b>
                             <div id="lines">
                             </div>
