--- a/templates/worker.html
+++ b/templates/worker.html
@@ -49,19 +49,17 @@
             <div id="sidebar-wrapper">
                 <div class="col-md-offset-2">
                     <ul class="sidebar-nav">
-                        
-                            <li class="sidebar-brand">
-                                <a href="/">
-                                    <img id="logo" src="static/img/logo.png" style="height:80px">
-                                    </img>
-                                </a>
-                            </li>
-                            <li class="icon">
-                                <a onclick="extend()">
-                                    ☰
-                                </a>
-                            </li>
-                        
+                        <li class="sidebar-brand">
+                            <a href="/">
+                                <img id="logo" src="static/img/logo.png" style="height:80px">
+                                </img>
+                            </a>
+                        </li>
+                        <li class="icon">
+                            <a onclick="extend()">
+                                ☰
+                            </a>
+                        </li>
                         <br/>
                         <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
                             How to use
@@ -109,43 +107,43 @@
             <!-- /#sidebar-wrapper -->
             <!-- Page Content -->
             <div id="page-content-wrapper">
-                <span id="showBlock">
-                    <b style="font-size:20px;">
-                        Keywords:
-                    </b>
-                </span>
-                <img class="keywordAdd" id="addKeyword" src="static/img/add.png">
-                    <hr style="color:black">
-                        <!--<iframe width="800" height="600" src="https://docs.google.com/document/d/1MJVag5wPXXHPkvDIK9ILAaZXxuFY61fhp5nH2c7Calk/edit?usp=sharing"></iframe>-->
-                        <div id="PadContent" style="float: left; width: 100%">
-                            <div id="mypad">
-                            </div>
-                            <button onclick="start()" type="button">
-                                Start
+                <div id="keywordDiv" style="visibility:hidden;">
+                    <span id="showBlock">
+                        <b style="font-size:20px;">
+                            Keywords:
+                        </b>
+                    </span>
+                    <img class="keywordAdd" id="addKeyword" src="static/img/add.png"/>
+                </div>
+                <hr/>
+                
+                <div id="PadContent" style="float: left; width: 100%">
+                    <div id="mypad">
+                    </div>
+                    <button onclick="start()" type="button">
+                        Start
+                    </button>
+                    <!-- <button type="button" onclick="restart()"> Restart </button> -->
+                    <button id="stop" type="button">
+                        Stop
+                    </button>
+                    <div id="lines" style="height:150px; overflow-y: scroll; overflow-x: hidden;">
+                    </div>
+                    {% if token %}
+                    <div id="tokenDiv" style="display:none">
+                        {{ token }}
+                    </div>
+                    {% endif %}
+                    <div style="height:50px; border: 3px #aaaaee solid; overflow-y: scroll; overflow-x: hidden; position: relative;">
+                        <textarea id="editLines" style="border: none; width: 100%">
+                        </textarea>
+                        <div contenteditable="false" style="position:absolute;right:0; bottom: 0">
+                            <button onclick="addSpeechToFirebase()" type="button">
+                                OK
                             </button>
-                            <!-- <button type="button" onclick="restart()"> Restart </button> -->
-                            <button id="stop" type="button">
-                                Stop
-                            </button>
-                            <div id="lines" style="height:150px; overflow-y: scroll; overflow-x: hidden;">
-                            </div>
-                            {% if token %}
-                            <div id="tokenDiv" style="display:none">
-                                {{ token }}
-                            </div>
-                            {% endif %}
-                            <div style="height:50px; border: 3px #aaaaee solid; overflow-y: scroll; overflow-x: hidden; position: relative;">
-                                <textarea id="editLines" style="border: none; width: 100%">
-                                </textarea>
-                                <div contenteditable="false" style="position:absolute;right:0; bottom: 0">
-                                    <button onclick="addSpeechToFirebase()" type="button">
-                                        OK
-                                    </button>
-                                </div>
-                            </div>
                         </div>
-                    </hr>
-                </img>
+                    </div>
+                </div>
             </div>
             <!-- /#page-content-wrapper -->
         </div>
