--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,16 @@
         <title>
             CHI2017 LanBridge
         </title>
+
     </head>
-    <body>
-        <img id="logo" src="static/img/logo_round.png" style="height:80px">
+    <body bgcolor=black>
+        <center><img src="static/img/lanbridge logo_v4_color.png" alt="Mountain View" style="width:30%;height:20%;"></center>
+        <!-- <img id="logo" src="static/img/logo_round.png" style="height:80px"> -->
         </img>
         <!-- <h3>
             CHI2017 LanBridge
         </h3> -->
-        
+
         <p>
             Thanks for using CHI2017 LanBridge! The following are the supporting sessions. We recommend to use <b>laptop</b> to have better experience.
         </p>
