--- a/templates/worker.html
+++ b/templates/worker.html
@@ -11,7 +11,7 @@
             CHI2017 LanBridge
         </title>
         <!-- Bootstrap Core CSS -->
-        <link href="static/css/bootstrap.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- Custom CSS -->
         <link href="static/css/simple-sidebar.css" rel="stylesheet"/>
         <link href="static/css/myCss.css" rel="stylesheet"/>
@@ -61,6 +61,8 @@
                             </a>
                         </li>
                         <br/>
+                        <p id="sessionTitle">
+                        </p>
                         <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
                             How to use
                         </a>
@@ -155,6 +157,7 @@
             $("#sidebar-wrapper").toggleClass("extend");
             $("#wrapper").toggleClass("extend");
             $("#how-to-use-link").toggleClass("extend");
+            $("#sessionTitle").toggleClass("extend");
         }
         </script>
         <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
