the latset slide will shown on the top

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -56,7 +56,7 @@
                             How to use
                         </a>
                         <hr/>
-                        <div class="sidebar-nav1">
+                        <div class="sidebar-slides">
                             <div class="slideTemplate">
                                 <div class="row">
                                     <div class="row-left">
@@ -97,6 +97,7 @@
                 </div>
                 <hr/>
                 <div id="PadContent" style="float: left; width: 100%">
+                    <p id="padId"></p>
                     <div id="mypad">
                     </div>
                     <div class="speechTemplate">
