--- a/templates/worker.html
+++ b/templates/worker.html
@@ -11,37 +11,38 @@
             CHI2017 LanBridge
         </title>
         <!-- Bootstrap Core CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Custom CSS -->
-        <link href="static/css/simple-sidebar.css" rel="stylesheet"/>
-        <link href="static/css/myCss.css" rel="stylesheet"/>
-        <script src="static/js/annyang.js">
-        </script>
-        <!-- jQuery -->
-        <script src="static/js/jquery.js">
-        </script>
-        <script src="static/js/etherpad.js">
-        </script>
-        <!-- <script src="static/js/worker.js"></script> -->
-        <script src="https://watson-speech.mybluemix.net/bower_components/watson-speech/dist/watson-speech.js">
-        </script>
-        <!-- window.fetch pollyfill for IE/Edge & Older Chrome/FireFox -->
-        <script src="https://watson-speech.mybluemix.net/bower_components/fetch/fetch.js">
-        </script>
-        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> -->
-        <!-- Bootstrap Core JavaScript -->
-        <script src="static/js/bootstrap.min.js">
-        </script>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js">
-        </script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js">
-        </script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript">
-        </script>
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]
+        <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet">
+            <!-- Custom CSS -->
+            <link href="static/css/simple-sidebar.css" rel="stylesheet"/>
+            <link href="static/css/myCss.css" rel="stylesheet"/>
+            <script src="static/js/annyang.js">
+            </script>
+            <!-- jQuery -->
+            <script src="static/js/jquery.js">
+            </script>
+            <script src="static/js/etherpad.js">
+            </script>
+            <!-- <script src="static/js/worker.js"></script> -->
+            <script src="https://watson-speech.mybluemix.net/bower_components/watson-speech/dist/watson-speech.js">
+            </script>
+            <!-- window.fetch pollyfill for IE/Edge & Older Chrome/FireFox -->
+            <script src="https://watson-speech.mybluemix.net/bower_components/fetch/fetch.js">
+            </script>
+            <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> -->
+            <!-- Bootstrap Core JavaScript -->
+            <script src="static/js/bootstrap.min.js">
+            </script>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js">
+            </script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js">
+            </script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js" type="text/javascript">
+            </script>
+            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+            <!--[if lt IE 9]
     <![endif]-->
+        </link>
     </head>
     <body onunload="userUnload()">
         <div id="wrapper">
@@ -66,43 +67,44 @@
                         <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
                             How to use
                         </a>
-                        <div class="slideTemplate">
-                            <div class="row">
-                                <div class="row-left">
-                                    <p class="id-of-slide" style="display: none">
-                                        1
-                                    </p>
-                                    <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
-                                        <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
-                                    </a>
-                                </div>
-                                <div class="row-right">
-                                    <img class="user-img" src="static/img/users.png" style="display: none">
-                                    </img>
-                                    <p class="number-of-looking" style="display: none">
-                                        0
-                                    </p>
-                                    <p class="keyword" style="display: none">
-                                        Keywords:
-                                    </p>
-                                </div>
-                            </div>
-                            <hr>
-                            </hr>
+                        <br/>
+                        <div class="row">
+                            <label class="take-picture">
+                                <span class="btn-label">
+                                    <i class="glyphicon glyphicon-camera">
+                                    </i>
+                                </span>
+                                Add Slides
+                                <input accept="image/*" class="take-picture" id="take-picture" type="file">
+                                </input>
+                            </label>
                         </div>
-                        <hr>
-                            <div class="row">
-                                <label class="take-picture">
-                                    <span class="btn-label">
-                                        <i class="glyphicon glyphicon-camera">
-                                        </i>
-                                    </span>
-                                    Add Slides
-                                    <input accept="image/*" class="take-picture" id="take-picture" type="file">
-                                    </input>
-                                </label>
+                        <hr/>
+                        <div class="sidebar-slides">
+                            <div class="slideTemplate">
+                                <div class="row">
+                                    <div class="row-left">
+                                        <p class="id-of-slide" style="display: none">
+                                            1
+                                        </p>
+                                        <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
+                                            <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
+                                        </a>
+                                    </div>
+                                    <div class="row-right">
+                                        <img class="user-img" src="static/img/users.png" style="display: none">
+                                        </img>
+                                        <p class="number-of-looking" style="display: none">
+                                            0
+                                        </p>
+                                        <p class="keyword" style="display: none">
+                                            Keywords:
+                                        </p>
+                                    </div>
+                                </div>
+                                <hr/>
                             </div>
-                        </hr>
+                        </div>
                     </ul>
                 </div>
             </div>
@@ -118,8 +120,8 @@
                     <img class="keywordAdd" id="addKeyword" src="static/img/add.png"/>
                 </div>
                 <hr/>
-                
                 <div id="PadContent" style="float: left; width: 100%">
+                    <p id="padId"></p>
                     <div id="mypad">
                     </div>
                     <button onclick="start()" type="button">
