count text-clicked and fix bug of user count

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -44,7 +44,7 @@
     <![endif]-->
         </link>
     </head>
-    <body onunload="userUnload()">
+    <body>
         <div id="wrapper">
             <!-- Sidebar -->
             <div id="sidebar-wrapper">
