record user count of each slides every 30 secs

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -127,9 +127,11 @@
                     <button onclick="start()" type="button">
                         Start
                     </button>
-                    <!-- <button type="button" onclick="restart()"> Restart </button> -->
                     <button id="stop" type="button">
                         Stop
+                    </button>
+                    <button id="record_user_number" type="button" onclick="recordUserNum()">
+                        Record user number
                     </button>
                     <div id="lines" style="height:150px; overflow-y: scroll; overflow-x: hidden;">
                     </div>
