--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link href="static/css/index.css" rel="stylesheet"/>
+        <script src="static/js/js.cookie.js"></script>
+        <script type="text/javascript">
+            if (Cookies.get('login') == undefined) {
+                window.location = "/";
+            }
+        </script>
     </head>
     <body>
         <br/><br/>
@@ -20,24 +26,6 @@
                 Thanks for using CHI2017 LanBridge! The following are the supporting sessions. We recommend to use <b>laptop</b> to have better experience.
             </p>
         </center>
-        <!-- <div class="panel panel-success">   
-          <div class="panel-heading">Monday</div>
-
-          <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Session Title</th>
-                        <th>Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="clickable-row">
-                    <td>test</td>
-                    </tr>
-                </tbody>
-          </table>
-        </div> -->
         <table class="table table-hover" id="session-display-table">
             <thead>
                 <tr>
@@ -110,18 +98,7 @@
         messagingSenderId: "20034161141"
       };
       firebase.initializeApp(config);
-    </script>
-    <script>
-        // Google Analytics
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-98093317-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>     
+    </script>    
     <script src="static/js/index.js">
     </script>
 </html>
