update supported session

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,47 +48,53 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="clickable-row" data-href="/slides?session_id=3">
+                <tr class="clickable-row" data-href="/slides?session_id=1">
                     <td>1</td>
                     <td>Social and Collaborative Technologies</td>
-                    <td>John C. Tang</td>
+                    <td>John Tang</td>
                     <td>Mon.  14:30-15:50</td>
                 </tr>
-                <tr class="clickable-row">
+                <tr class="clickable-row" data-href="/slides?session_id=2">
                     <td>2</td>
-                    <td>Self-monitored Healthcare</td>
-                    <td>Munmun De Choudhury</td>
+                    <td>Clinical Settings</td>
+                    <td>Eun Kyoung Choe</td>
                     <td>Mon.  16:30-17:50</td>
                 </tr>
-                <tr class="clickable-row">
+                <tr class="clickable-row" data-href="/slides?session_id=3">
                     <td>3</td>
-                    <td>Design and Cognitive Impairment</td>
-                    <td>Anja Thieme</td>
-                    <td>Tue.  9:30-10:50</td>
-                </tr>
-                <tr class="clickable-row">
-                    <td>4</td>
-                    <td>Crowd-powered Systems</td>
-                    <td>Katharina Reinecke</td>
-                    <td>Tue.  11:30-12:50</td>
-                </tr>
-                <tr class="clickable-row">
-                    <td>5</td>
                     <td>Improving Gaze Mechanisms</td>
                     <td>Naomi Yamashita</td>
                     <td>Tue.  14:30-15:50</td>
                 </tr>
-                <tr class="clickable-row">
-                    <td>6</td>
+                <tr class="clickable-row" data-href="/slides?session_id=4">
+                    <td>4</td>
                     <td>Social Justice</td>
                     <td>Michael Muller</td>
                     <td>Tue.  16:30-17:50</td>
                 </tr>
-                <tr class="clickable-row">
-                    <td>7</td>
-                    <td>Technology and Spatial Landmarks</td>
-                    <td>Brent Hecht</td>
+                <tr class="clickable-row" data-href="/slides?session_id=5">
+                    <td>5</td>
+                    <td>Chatbot Interfaces</td>
+                    <td>Sadat Shami</td>
                     <td>Wed.  9:30-10:50</td>
+                </tr>
+                <tr class="clickable-row" data-href="/slides?session_id=6">
+                    <td>6</td>
+                    <td>User Perceptions in Sociotechnical Systems</td>
+                    <td>Jennifer Marlow</td>
+                    <td>Wed.  11:30-12:50</td>
+                </tr>
+                <tr class="clickable-row" data-href="/slides?session_id=7">
+                    <td>7</td>
+                    <td>Serious + Education + Exer Games</td>
+                    <td>Konstantinos Papangelis</td>
+                    <td>Wed.  14:30-15:50</td>
+                </tr>
+                <tr class="clickable-row" data-href="/slides?session_id=8">
+                    <td>8</td>
+                    <td>Improving Video Communication</td>
+                    <td>Hao-Chuan Wang</td>
+                    <td>Wed.  16:30-17:50</td>
                 </tr>
             </tbody>
         </table>    
