--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,12 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class="clickable-row" data-href="/slides?session_id=501">
+                    <td>*</td>
+                    <td>Software Studio</td>
+                    <td>Hao-Chuan Wang</td>
+                    <td>Tue.  15:30-17:20</td>
+                </tr>
                 <tr class="clickable-row" data-href="/slides?session_id=1">
                     <td>1</td>
                     <td>Social and Collaborative Technologies</td>
