update login css

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     <td>Hao-Chuan Wang</td>
                     <td>Tue.  15:30-17:20</td>
                 </tr>
-                <tr class="clickable-row" data-href="/slides?session_id=1">
+                <!-- <tr class="clickable-row" data-href="/slides?session_id=1">
                     <td>1</td>
                     <td>Social and Collaborative Technologies</td>
                     <td>John Tang</td>
@@ -89,7 +89,7 @@
                     <td>Improving Video Communication</td>
                     <td>Hao-Chuan Wang</td>
                     <td>Wed.  16:30-17:50</td>
-                </tr>
+                </tr> -->
             </tbody>
         </table>    
         </div>
