--- a/templates/login.html
+++ b/templates/login.html
@@ -41,8 +41,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <br/>
             <form method="post" name="loginForm">
                 <!-- <input name="u" placeholder="Username" required="required" type="text"/> -->
-                <input name="password" placeholder="Password" required="" type="password"/>
-                <button class="btn btn-primary btn-block btn-large" onclick="validateForm()" type="button">
+                <input name="password" placeholder="Password" type="password" required onKeyPress="return submitenter(this,event)"/>
+                <button class="btn btn-primary btn-block btn-large" onclick="validateForm()" type="button" >
                     Let me in.
                 </button>
             </form>
