add survey link

--- a/static/css/simple-sidebar.css
+++ b/static/css/simple-sidebar.css
@@ -251,4 +251,12 @@ input[type="file"] {
     #sessionTitle.extend{
         display: block;
     }
+
+    #survey-link{
+        display: none;
+    }
+
+    #survey-link.extend{
+        display: block;
+    }
 }
