--- a/templates/slides.html
+++ b/templates/slides.html
@@ -67,6 +67,8 @@
                         <a href="javascript: return false;" id="how-to-use-link" onclick="changePad('introduction');">
                             How to use
                         </a>
+                        <br/>
+                        <a href="https://goo.gl/forms/COfMGAQI1xZw6gt23" id="survey-link">Survey Link</a>
                         <hr/>
                         <div class="sidebar-slides">
                             <div class="slideTemplate">
@@ -132,6 +134,7 @@
             $("#sidebar-wrapper").toggleClass("extend");
             $("#wrapper").toggleClass("extend");
             $("#how-to-use-link").toggleClass("extend");
+            $("#survey-link").toggleClass("extend");
             $("#sessionTitle").toggleClass("extend");
 
         }
