--- a/templates/slides.html
+++ b/templates/slides.html
@@ -51,7 +51,7 @@
                     <ul class="sidebar-nav">
                         <br/>
                         <li class="sidebar-brand">
-                            <a href="/">
+                            <a href="/index">
                                 <img id="logo" src="static/img/logo.png" style="height:80px">
                                 </img>
                             </a>
