--- a/static/css/login.css
+++ b/static/css/login.css
@@ -60,3 +60,17 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 #unsuccessful-login-alert {
 	display: none;
 }
+
+p {
+	font-size: 20px;
+	font-family: 'Helvetica Neue';
+	font-weight: 200;
+	color: #fff;
+}
+
+#survey-link {
+	font-size: 20px;
+	font-family: 'Helvetica Neue';
+	font-weight: 205;
+	color: #6ed6de;
+}
