modify pad original text & create session

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <br>
         <center>
             <p>
-                Thanks for using CHI2017 LanBridge! The following are the supporting sessions. We recommend to use <b>laptop</b> to have better experience.
+                Welcome to CHI 2017 LanBridge! The following list shows regular sessions with LanBridge available. We recommend to use LanBridge with web browsers running on <b style="color: #6ed6de">laptops</b> to ensure better experience.
             </p>
         </center>
         <table class="table table-hover" id="session-display-table">
