--- a/static/css/login.css
+++ b/static/css/login.css
@@ -62,15 +62,17 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 }
 
 p {
-	font-size: 20px;
+	font-size: 18px;
 	font-family: 'Helvetica Neue';
 	font-weight: 200;
 	color: #fff;
+	text-align: center;
 }
 
 #survey-link {
-	font-size: 20px;
+	font-size: 18px;
 	font-family: 'Helvetica Neue';
 	font-weight: 205;
 	color: #6ed6de;
+	text-decoration: underline;
 }
