--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </head>
     <body>
         <div class="alert alert-danger" id="unsuccessful-login-alert" role="alert">
-            Login was unsuccessful, please check your password
+            Login was unsuccessful, please check your passcode. (same as CHI wifi passcode)
         </div>
         <div class="login">
             <center>
@@ -37,13 +37,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <br/>
             <br/>
             <form method="post" name="loginForm">
-                <input name="password" placeholder="Password" type="password" required onKeyPress="return submitenter(this,event)"/>
+                <input name="password" placeholder="CHI wifi passcode" type="password" required onKeyPress="return submitenter(this,event)"/>
                 <button class="btn btn-primary btn-block btn-large" onclick="validateForm()" type="button" >
                     Let me in.
                 </button>
             </form>
             <br/>
-            <p>If you are willing to help us improve the system, please enter the <a href="https://goo.gl/forms/COfMGAQI1xZw6gt23" id="survey-link">link</a> to complete the survey.
+            <p>Please <a href="https://goo.gl/forms/COfMGAQI1xZw6gt23" id="survey-link">complete the survey</a> for helping.
             </p>
         </div>
         <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
