--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 </button>
             </form>
             <br/>
-            <p>Please <a href="https://goo.gl/forms/COfMGAQI1xZw6gt23" id="survey-link">complete the survey</a> for helping.
+            <p>Please <a href="https://goo.gl/forms/COfMGAQI1xZw6gt23" id="survey-link">complete the survey</a> for helping improve the system.
             </p>
         </div>
         <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js">
