--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </head>
     <body>
         <div class="alert alert-danger" id="unsuccessful-login-alert" role="alert">
-            Login was unsuccessful, please check your passcode. (same as CHI wifi passcode)
+            Login was unsuccessful, please check your passcode. (same as CHI Wifi passcode)
         </div>
         <div class="login">
             <center>
@@ -37,9 +37,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             <br/>
             <br/>
             <form method="post" name="loginForm">
-                <input name="password" placeholder="CHI wifi passcode" type="password" required onKeyPress="return submitenter(this,event)"/>
+                <input name="password" placeholder="Please enter CHI Wifi passcode" type="password" required onKeyPress="return submitenter(this,event)"/>
                 <button class="btn btn-primary btn-block btn-large" onclick="validateForm()" type="button" >
-                    Let me in.
+                    Start
                 </button>
             </form>
             <br/>
