--- a/static/css/simple-sidebar.css
+++ b/static/css/simple-sidebar.css
@@ -89,6 +89,7 @@ body {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
+    margin-bottom: 20px;
 }
 
 .sidebar-nav > .sidebar-brand a {
