remove the edit textarea in worker.html

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -140,7 +140,7 @@
                         {{ token }}
                     </div>
                     {% endif %}
-                    <div style="height:50px; border: 3px #aaaaee solid; overflow-y: scroll; overflow-x: hidden; position: relative;">
+                    <!-- <div style="height:50px; border: 3px #aaaaee solid; overflow-y: scroll; overflow-x: hidden; position: relative;">
                         <textarea id="editLines" style="border: none; width: 100%">
                         </textarea>
                         <div contenteditable="false" style="position:absolute;right:0; bottom: 0">
@@ -148,7 +148,7 @@
                                 OK
                             </button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- /#page-content-wrapper -->
