create a session for Tailand workshop

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,13 +36,19 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="clickable-row" data-href="/slides?session_id=1">
+                <tr class="clickable-row" data-href="/slides?session_id=10">
+                    <td>1</td>
+                    <td>Keynote speech for Formation of Thailand ACM SIGCHI Chapter</td>
+                    <td>Dr. Eunice Sari (SIGCHI Liaison for Southeast Asia) and Adi Tedjasaputra (Indonesia SIGCHI Chapter)</td>
+                    <td>Sun, June 11, 2017 1:00 PM - 2:00 PM</td>
+                </tr>
+                <!--<tr class="clickable-row" data-href="/slides?session_id=1">
                     <td>1</td>
                     <td>Social and Collaborative Technologies</td>
                     <td>John Tang</td>
                     <td>Mon.  14:30-15:50</td>
                 </tr>
-                <tr class="clickable-row" data-href="/slides?session_id=2">
+                 <tr class="clickable-row" data-href="/slides?session_id=2">
                     <td>2</td>
                     <td>Clinical Settings</td>
                     <td>Eun Kyoung Choe</td>
@@ -83,7 +89,7 @@
                     <td>Improving Video Communication</td>
                     <td>Hao-Chuan Wang</td>
                     <td>Wed.  16:30-17:50</td>
-                </tr>
+                </tr> -->
             </tbody>
         </table>    
         </div>
