remove stop button

--- a/templates/worker_Google.html
+++ b/templates/worker_Google.html
@@ -127,9 +127,9 @@
                     <button id="start_button" onclick="startButton(event)" type="button">
                         Start
                     </button>
-                    <button id="stop" type="button">
+                    <!-- <button id="stop" type="button">
                         Stop
-                    </button>
+                    </button> -->
                     <button id="record_user_number" type="button" onclick="recordUserNum()">
                         Record user number
                     </button>
